fixed some spacing issues

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -23,6 +23,7 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+
 }
 
 .time-block{
@@ -41,6 +42,12 @@ textarea{
   color: #000000;
   border-top: 1px dashed #000000;
   margin-right: 3px;
+  padding-right: 9px;
+}
+
+ /* to fix some spacing issues */
+.noXtra {
+  padding-right: 0px;
 }
 
 /* These mark the current status of the blocks  */
